syntax = "proto3";
package orders_service_api;

service Orders {
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {}
}

message GetOrderRequest {
  string order_id = 1;
}

message GetOrderResponse {
  string status = 1;
}
